--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "yarn ts-node src/sorting-algorithms/sortingAlgorithms.test.ts"
+    "test": "yarn ts-node src/sorting-algorithms/sortingAlgorithms.ts"
   },
   "jest": {
     "transform": {}
