--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "yarn ts-node src/sorting-algorithms/sortingAlgorithmTests.ts"
+    "start": "yarn ts-node src/sorting-algorithms/sortingAlgorithmTests.ts",
+    "jest": "test"
   },
   "jest": {
     "transform": {}
